--- a/0_doing_python_with_math/ch01.md
+++ b/0_doing_python_with_math/ch01.md
@@ -1,15 +1,27 @@
-- [**Working with Numbers**](#working-with-numbers)
-- [**Basic Mathematical Operations**](#basic-mathematical-operations)
-- [**Labels: Attaching Names to Numbers**](#labels-attaching-names-to-numbers)
-- [**Different Kinds of Numbers**](#different-kinds-of-numbers)
-  - [***Working with Fractions***](#working-with-fractions)
-  - [***Complex Numbers***](#complex-numbers)
-- [**Getting User Input**](#getting-user-input)
-  - [***Handling Exceptions and Invalid Input***](#handling-exceptions-and-invalid-input)
-  - [***Fractions and Complex Numbers as Input***](#fractions-and-complex-numbers-as-input)
+- [**0.0 Working with Numbers**](#00-working-with-numbers)
+- [**1.0 Basic Mathematical Operations**](#10-basic-mathematical-operations)
+- [**2.0 Labels: Attaching Names to Numbers**](#20-labels-attaching-names-to-numbers)
+- [**3.0 Different Kinds of Numbers**](#30-different-kinds-of-numbers)
+  - [**3.1 Working with Fractions**](#31-working-with-fractions)
+  - [**3.2 Complex Numbers**](#32-complex-numbers)
+- [**4.0 Getting User Input**](#40-getting-user-input)
+  - [**4.01 Handling Exceptions and Invalid Input**](#401-handling-exceptions-and-invalid-input)
+  - [**4.2 Fractions and Complex Numbers as Input**](#42-fractions-and-complex-numbers-as-input)
+- [**5.0 Writing Programs That Do the Math for You**](#50-writing-programs-that-do-the-math-for-you)
+  - [**5.1 Calculating the Factors of an Integer**](#51-calculating-the-factors-of-an-integer)
+  - [**5.2 Generating Multiplication Tables**](#52-generating-multiplication-tables)
+  - [**5.3 Converting Units of Measurement**](#53-converting-units-of-measurement)
+  - [**5.4 Finding the Roots of a Quadratic Equation**](#54-finding-the-roots-of-a-quadratic-equation)
+- [**6.0 What You Learned**](#60-what-you-learned)
+- [**7.0 Programming Challenges**](#70-programming-challenges)
+  - [**7.1 #1: Even-Odd Vending Machine**](#71-1-even-odd-vending-machine)
+  - [**7.2 #2: Enhanced Multiplication Table Generator**](#72-2-enhanced-multiplication-table-generator)
+  - [**7.3 #3: Enhanced Unit Converter**](#73-3-enhanced-unit-converter)
+  - [**7.4 #4: Fraction Calculator**](#74-4-fraction-calculator)
+  - [**7.5 #5: Give Exit Power to the User**](#75-5-give-exit-power-to-the-user)
 
 
-### **Working with Numbers** 
+### **0.0 Working with Numbers** 
 -------------------------------------------------
 
 ![image](graphics/common-01.jpg)
@@ -20,7 +32,10 @@ using Python itself. We'll start by performing basic mathematical
 operations, and then we'll write simple programs for manipulating and
 understanding numbers. Let's get started!
 
-### **Basic Mathematical Operations**
+**page_1** 
+___
+
+### **1.0 Basic Mathematical Operations**
 
 The *Python interactive shell* is going to be our friend in this book.
 Start the Python 3 IDLE shell and say "hello" (see [Figure
@@ -107,6 +122,9 @@ modulo % operator:
 1
 ```
 
+**page_2** 
+___
+
 You can calculate the power of numbers using the exponential
 ** operator. The examples below illustrate this:
 
@@ -150,7 +168,10 @@ is 10; 10 times 5 is 50.
 These are the absolute basics of manipulating numbers in Python. Let's
 now learn how we can assign names to numbers.
 
-### **Labels: Attaching Names to Numbers** 
+**page_3** 
+___
+
+### **2.0 Labels: Attaching Names to Numbers** 
 
 As we start designing more complex Python programs, we'll assign names
 to numbers---at times for convenience, but mostly out of necessity.
@@ -181,7 +202,7 @@ to something like *x* in the equation *x* + 2 = 3), in this book I use
 the term *variable* only in the context of mathematical equations and
 expressions.
 
-### **Different Kinds of Numbers**
+### **3.0 Different Kinds of Numbers**
 
 You may have noticed that I've used two kinds of numbers to demonstrate
 the mathematical operations---numbers without a decimal point, which you
@@ -215,6 +236,9 @@ point number (type ['float']). We all know that 3 and 3.0
 are mathematically equivalent, but in many situations, Python will treat
 these two numbers differently because they are two different types.
 
+**page_4** 
+___
+
 Some of the programs we write in this chapter will work properly only
 with an integer as an input. As we just saw, Python won't recognize a
 number like 1.0 or 4.0 as an integer, so if we want to accept numbers
@@ -242,7 +266,8 @@ perform the reverse conversion:
 [float()] takes the integer that was input and adds a decimal
 point to turn it into a floating point number.
 
-#### ***Working with Fractions***
+
+#### **3.1 Working with Fractions**
 
 Python can also handle fractions, but to do that, we'll need to use
 Python's [fractions] module. You can think of a *module* as a
@@ -259,6 +284,9 @@ our programs. Before we can use it, we'll need to *import* it, which is
 a way of telling Python that we want to use the class from this module.
 Let's see a quick example---we'll create a new label, [f],
 which refers to the fraction 3/4:
+
+**page_5** 
+___
 
 ```
 >>> [from fractions import Fraction] # Importing the Fraction class from the fractions module
@@ -299,7 +327,10 @@ Fraction(2, 1)
 Now you know the basics of working with fractions in Python. Let's move
 on to a different kind of number.
 
-#### ***Complex Numbers*** 
+**page_6** 
+___
+
+#### **3.2 Complex Numbers** 
 
 The numbers we've seen so far are the so-called *real numbers*. Python
 also supports *complex numbers* with the imaginary part identified by
@@ -386,6 +417,9 @@ following:
 3.605551275463989
 ```
 
+**page_7** 
+___
+
 A simpler way to find the magnitude of a complex number is with the
 [abs()] function. The [abs()] function returns the
 absolute value when called with a real number as its argument. For
@@ -401,7 +435,7 @@ The standard library's [cmath] module ([cmath] for
 *complex math*) provides access to a number of other specialized
 functions to work with complex numbers.
 
-### **Getting User Input** 
+### **4.0 Getting User Input** 
 
 As we start to write programs, it will help to have a nice, simple way
 to accept user input via the [input()] function. That way, we
@@ -410,17 +444,17 @@ operations on that number, and then display the results of the
 operations. Let's see it in action:
 
 ```
-[➊] >>> [a = input()]
-[➋] 1
+>>> [a = input()]  # User input is requested here
+1
 ```
 
 At [➊], we call the [input()] function, which waits for
-you to type something, as shown at [➋], and press [ENTER]{.small}.
+you to type something, as shown at [➋], and press [ENTER].
 The input provided is stored in [a]:
 
 ```
-   >>> [a]
-[➌] '1'
+>>> [a] # Display value stored as string
+'1'
 ```
 
 Notice the single quotes around 1 at [➌]. The [input()]
@@ -429,11 +463,14 @@ of characters between two quotes. When you want to create a string,
 either single quotes or double quotes can be used:
 
 ```
->>> [s1 = 'a string']
->>> [s2 = \"a string\"]
+>>> [s1 = 'a string']  # Single quotes used to create a string
+>>> [s2 = "a string"]  # Double quotes used to create a string
 ```
 
 Here, both [s1] and [s2] refer to the same string.
+
+**page_8** 
+___
 
 Even if the only characters in a string are numbers, Python won't treat
 that string as a number unless we get rid of those quotation marks. So
@@ -443,10 +480,10 @@ converted to an integer or floating point number using the
 [int()] or [float()] function, respectively:
 
 ```
->>> [a = '1']
->>> [int(a) + 1]
-2\
->>> [float(a) + 1]
+>>> [a = '1']  # String containing a number
+>>> [int(a) + 1]  # String converted to integer and used in a mathematical operation
+2
+>>> [float(a) + 1]  # String converted to float and used in a mathematical operation
 2.0
 ```
 
@@ -462,10 +499,9 @@ input that string into the [int()] function, you'll get an
 error message:
 
 ```
->>> [int('2.0')]
-Traceback (most recent call last):\
-[]{#page_9}\
-  File \"\<pyshell\#26>\", line 1, in \<module>\
+>>> [int('2.0')]  # Attempt to convert a string containing a floating point number to an integer
+Traceback (most recent call last):
+  File "<pyshell #26>", line 1, in <module>
     int('2.0')
 ValueError: invalid literal for int() with base 10: '2.0'
 ```
@@ -480,38 +516,41 @@ Python cannot convert it into an equivalent floating point number or
 integer. Once again, a [ValueError] exception is raised:
 
 ```
->>> [a = float(input())]
+>>> [a = float(input())]  # Attempt to convert a fractional number to a float
 3/4\
-Traceback (most recent call last):\
-  File \"\<pyshell\#25>\", line 1, in \<module>\
+Traceback (most recent call last):
+  File "<pyshell #25>", line 1, in <module>
     a=float(input())
 ValueError: could not convert string to float: '3/4'
 ```
 
 You may find it useful to perform the conversion in a
-[try\...except] block so that you can *handle* this exception
+[try...except] block so that you can *handle* this exception
 and alert the user that the program has encountered an invalid input.
-We'll look at [try\...except] blocks next.
+We'll look at [try...except] blocks next.
 
-#### ***Handling Exceptions and Invalid Input*** 
+**page_9** 
+___
 
-If you're not familiar with [try\...except], the basic idea is
+#### **4.01 Handling Exceptions and Invalid Input** 
+
+If you're not familiar with [try...except], the basic idea is
 this: if you execute one or more statements in a
-[try\...except] block and there's an error while executing,
+[try...except] block and there's an error while executing,
 your program will not crash and print a [Traceback]. Instead,
 the execution is transferred to the [except] block, where you
 can perform an appropriate operation, for instance, printing a helpful
 error message or trying something else.
 
 This is how you would perform the above conversion in a
-[try\...except] block and print a helpful error message on
+[try...except] block and print a helpful error message on
 invalid input:
 
 ```
 >>> [try:]
-        [a = float(input('Enter a number: '))]
+[a = float(input('Enter a number: '))]  # Attempt to convert user input to a float
 [except ValueError:]
-        [print('You entered an invalid number')]
+[print('You entered an invalid number')]  # Print error message if conversion fails
 ```
 
 Note that we need to specify the type of exception we want to handle.
@@ -530,7 +569,7 @@ error message, as shown at [➊]:
 function to tell the user what kind of input is expected. For example:
 
 ```
->>> [a = input('Input an integer: ')]
+>>> [a = input('Input an integer: ')]  # Prompt user to input an integer
 ```
 
 The user will now see the message hinting to enter an integer as input:
@@ -543,9 +582,9 @@ attempt to perform any operations on these numbers. You can combine the
 input and conversion in a single statement, as follows:
 
 ```
->>> [a = int(input())]
-1\
->>> [a + 1]
+>>> [a = int(input())]  # Combine user input and conversion to integer
+1
+>>> [a + 1]  # Perform operation on the integer
 2
 ```
 
@@ -553,11 +592,14 @@ This works great if the user inputs an integer. But as we saw earlier,
 if the input is a floating point number (even one that's equivalent to
 an integer, like 1.0), this will produce an error:
 
+**page_10** 
+___
+
 ```
->>> [a = int(input())]
+>>> [a = int(input())]  # Attempt to convert user input to integer
 [1.0]
-Traceback (most recent call last):\
-  File \"\<pyshell\#42>\", line 1, in \<module>\
+Traceback (most recent call last):
+  File "<pyshell #42>", line 1, in <module>
     a=int(input())
 ValueError: invalid literal for int() with base 10: '1.0'
 ```
@@ -570,7 +612,7 @@ which Python *sees* as floating point numbers but that are equivalent to
 integers and would work just fine if they were entered as the right
 Python type.
 
-To get around all this, we will use the [is\_integer()] method
+To get around all this, we will use the [is_integer()] method
 to filter out any numbers with a significant digit after the decimal
 point. (This method is only defined for [float] type numbers
 in Python; it won't work with numbers that are already entered in
@@ -579,27 +621,27 @@ integer form.)
 Here's an example:
 
 ```
->>> [1.1.is\_integer()]
+>>> [1.1.is_integer()]  # Check if 1.1 is an integer
 False
 ```
 
-Here, we call the method [is\_integer()] to check if 1.1 is an
+Here, we call the method [is_integer()] to check if 1.1 is an
 integer, and the result is [False] because 1.1 really is a
-floating point number. On the other []{#page_11}hand, when the method is
+floating point number. On the other hand, when the method is
 called with 1.0 as the floating point number, the result is
 [True]:
 
 ```
->>> [1.0.is\_integer()]
+>>> [1.0.is_integer()]  # Check if 1.0 is an integer
 True
 ```
 
-We can use [is\_integer()] to filter out noninteger input
+We can use [is_integer()] to filter out noninteger input
 while keeping inputs like 1.0, which is expressed as a floating point
 number but is equivalent to an integer. We'll see how the method would
 fit into a larger program a bit later.
 
-#### ***Fractions and Complex Numbers as Input*** 
+#### **4.2 Fractions and Complex Numbers as Input** 
 
 The [Fraction] class we learned about earlier is also capable
 of converting a string such as ['3/4'] to a
@@ -607,21 +649,24 @@ of converting a string such as ['3/4'] to a
 fraction as an input:
 
 ```
->>> [a = Fraction(input('Enter a fraction: '))]
+>>> [a = Fraction(input('Enter a fraction: '))]  # Prompt user to input a fraction
 Enter a fraction: [3/4]
->>> [a]
+>>> [a]  # Display the fraction
 Fraction(3, 4)
 ```
+
+**page_11** 
+___
 
 Try entering a fraction such as 3/0 as input:
 
 ```
->>> [a = Fraction(input('Enter a fraction: '))]
+>>> [a = Fraction(input('Enter a fraction: '))]  # Prompt user to input a fraction
 Enter a fraction: [3/0]
-Traceback (most recent call last):\
-  File \"\<pyshell\#2>\", line 1, in \<module>\
+Traceback (most recent call last):
+  File "<pyshell #2>", line 1, in <module>
     a = Fraction(input('Enter a fraction: '))
-  File \"/usr/lib64/python3.3/fractions.py\", line 167, in \_\_new\_\_\
+  File "/usr/lib64/python3.3/fractions.py", line 167, in __new__
     raise ZeroDivisionError('Fraction(%s, 0)' % numerator)
 ZeroDivisionError: Fraction(3, 0)
 
@@ -631,12 +676,12 @@ you're planning on having users enter fractions as input in one of your
 programs, it's a good idea to always catch such exceptions. Here is how
 you can do something like that:
 
-```
->>> [try:]
-        [a = Fraction(input('Enter a fraction: '))
-except ZeroDivisionError:]
-        [print('Invalid fraction')]
-\
+```python
+>>> try:
+        [a = Fraction(input('Enter a fraction: '))]  # Prompt user to input a fraction
+except ZeroDivisionError:
+        [print('Invalid fraction')]  # Print error message if fraction is invalid
+
 Enter a fraction: [3/0]
 Invalid fraction
 ```
@@ -644,13 +689,13 @@ Invalid fraction
 Now, whenever your program's user enters a fraction with 0 in the
 denominator, it'll print the message [Invalid fraction].
 
-[]{#page_12}Similarly, the [complex()] function can convert a
+Similarly, the [complex()] function can convert a
 string such as ['2+3j'] into a complex number:
 
 ```
->>> [z = complex(input('Enter a complex number: '))]
+>>> [z = complex(input('Enter a complex number: '))]  # Prompt user to input a complex number
 Enter a complex number: [2+3j]
->>> [z]
+>>> [z]  # Display the complex number
 (2+3j)
 ```
 
@@ -658,10 +703,10 @@ If you enter the string as ['2 + 3j'] (with spaces), it will
 result in a [ValueError] error message:
 
 ```
->>> [z = complex(input('Enter a complex number: '))]
+>>> [z = complex(input('Enter a complex number: '))]  # Prompt user to input a complex number
 Enter a complex number: [2 + 3j]
-Traceback (most recent call last):\
-  File \"\<pyshell\#43>\", line 1, in \<module>\
+Traceback (most recent call last):
+  File "<pyshell #43>", line 1, in <module>
     z = complex(input('Enter a complex number: '))
 ValueError: complex() arg is a malformed string
 ```
@@ -670,13 +715,16 @@ It's a good idea to catch the [ValueError] exception when
 converting a string to a complex number, as we've done for other number
 types.
 
-### **Writing Programs That Do the Math for You**
+**page_12** 
+___
+
+### **5.0 Writing Programs That Do the Math for You**
 
 Now that we have learned some of the basic concepts, we can combine them
 with Python's conditional and looping statements to make some programs
 that are a little more advanced and useful.
 
-#### ***Calculating the Factors of an Integer*** 
+#### **5.1 Calculating the Factors of an Integer** 
 
 When a nonzero integer, [a], divides another integer,
 [b], leaving a remainder 0, [a] is said to be a
@@ -686,11 +734,11 @@ a nonzero integer, [a], is a factor of another integer,
 [b]:
 
 ```
->>> [def is\_factor(a, b):]
-        [if b % a == 0:]
-            [return True]
-        [else:]
-            [return False]
+>>> [def is\_factor(a, b):]  # Define a function to check if a is a factor of b
+        [if b % a == 0:]  # If b divided by a leaves no remainder
+            [return True]  # Return True
+        [else:]  # If b divided by a leaves a remainder
+            [return False]  # Return False
 ```
 
 We use the [%] operator introduced earlier in this chapter to
@@ -699,7 +747,7 @@ like "Is 4 a factor of 1024?", you can use the [is\_factor()]
 function:
 
 ```
->>> [is\_factor(4, 1024)]
+>>> [is\_factor(4, 1024)]  # Check if 4 is a factor of 1024
 True
 ```
 
@@ -714,8 +762,8 @@ Before we write the full program, let's take a look at how
 function looks like this:
 
 ```
->>> [for i in range(1, 4):]
-        [print(i)]
+>>> [for i in range(1, 4):]  # Loop through the numbers 1 to 3
+        [print(i)]  # Print each number
 1\
 2\
 3
@@ -731,12 +779,15 @@ doesn't print 4, so the last number it prints is the number before the
 stop value (3). It's also important to note that the [range()]
 function accepts only integers as its arguments.
 
+**page_13** 
+___
+
 You can also use the [range()] function without specifying the
 start value, in which case it's assumed to be 0. For example:
 
 ```
->>> [for i in range(5):]
-        [print(i)]
+>>> [for i in range(5):]  # Loop through the numbers 0 to 4
+        [print(i)]  # Print each number
 0\
 1\
 2\
@@ -752,8 +803,8 @@ step value). For example, the following program prints the odd numbers
 *below* 10:
 
 ```
->>> [for i in range(1,10,2):]
-        [print(i)]
+>>> [for i in range(1,10,2):]  # Loop through the odd numbers 1 to 9
+        [print(i)]  # Print each number
 1\
 3\
 5\
@@ -777,9 +828,9 @@ Python as part of the program; it's just commentary for us humans.
 \
    def factors(b):\
 \
-[➊]     for i in range(1, b+1):\
-           if b % i == 0:\
-               print(i)
+[➊]     for i in range(1, b+1):  # Loop through the numbers 1 to b
+           if b % i == 0:  # If b divided by i leaves no remainder
+               print(i)  # Print i
 \
    if \_\_name\_\_ == '\_\_main\_\_':\
 \
@@ -791,6 +842,9 @@ Python as part of the program; it's just commentary for us humans.
        else:\
            print('Please enter a positive integer')
 ```
+
+**page_14** 
+___
 
 The [factors()] function defines a [for] loop that
 iterates once for every integer between 1 and the input integer at
@@ -827,7 +881,10 @@ the [is\_integer()] method [➋] to make sure the input is
 valid. If the input isn't a positive integer, the program prints a
 user-friendly instruction instead of just a big error message.
 
-#### ***Generating Multiplication Tables*** 
+**page_15** 
+___
+
+#### **5.2 Generating Multiplication Tables** 
 
 Consider three numbers, *a*, *b*, and *n*, where *n* is an integer, such
 that
@@ -908,6 +965,9 @@ printer:
        multi\_table(float(a))
 ```
 
+**page_16** 
+___
+
 The function [multi\_table()] implements the main
 functionality of the program. It takes the number for which the
 multiplication table will be printed as a parameter, [a].
@@ -974,7 +1034,10 @@ integer, zeros are added at the end:
 Two zeros are added because we specified that we should print exactly
 two numbers after the decimal point.
 
-#### ***Converting Units of Measurement*** 
+**page_17** 
+___
+
+#### **5.3 Converting Units of Measurement** 
 
 The International System of Units defines seven *base quantities*. These
 are then used to derive other quantities, referred to as *derived
@@ -1005,6 +1068,9 @@ writing programs to perform those unit conversions for you.
 We'll start with length. In the United States and United Kingdom, inches
 and miles are often used for measuring length, while most other
 countries use centimeters and kilometers.
+
+**page_18** 
+___
 
 An inch is equal to 2.54 centimeters, and you can use the multiplication
 operation to convert a measurement in inches to centimeters. You can
@@ -1062,6 +1128,9 @@ You can evaluate this formula in a similar manner:
 >>> [C \* (9 / 5) + 32]
 98.60000000000001
 ```
+
+**page_19** 
+___
 
 We create a label, [C], with the value 37 (the normal human
 body temperature in Celsius). Then, we convert it into Fahrenheit using
@@ -1135,7 +1204,10 @@ This program just converts between miles and kilometers, but in a
 programming challenge later, you'll extend this program so that it can
 perform conversions of other units.
 
-#### ***Finding the Roots of a Quadratic Equation*** 
+**page_20** 
+___
+
+#### **5.4 Finding the Roots of a Quadratic Equation** 
 
 What do you do when you have an equation such as *x* + 500 -- 79 = 10
 and you need to find the value of the unknown variable, *x*? You
@@ -1168,6 +1240,9 @@ A quadratic equation has two roots---two values of *x* for which the two
 sides of the quadratic equation are equal (although sometimes these two
 values may turn out to be the same). This is indicated here by the
 *x*~1~ and *x*~2~ in the quadratic formula.
+
+**page_21** 
+___
 
 Comparing the equation *x*^2^ + 2*x* + 1 = 0 to the generic quadratic
 equation, we see that *a* = 1, *b* = 2, and *c* = 1. We can substitute
@@ -1232,6 +1307,9 @@ if \_\_name\_\_ == '\_\_main\_\_':\
     roots(float(a), float(b), float(c))
 ```
 
+**page_22** 
+___
+
 At first, we use the labels [a], [b], and
 [c] to reference the values of the three constants of a
 quadratic equation. Then, we call the [roots()] function with
@@ -1274,7 +1352,10 @@ The roots printed above are complex numbers (indicated by
 [j]), and the program has no problem calculating or displaying
 them.
 
-### **What You Learned** 
+**page_23** 
+___
+
+### **6.0 What You Learned** 
 
 Great work on finishing the first chapter! You learned to write programs
 that recognize integers, floating point numbers, fractional numbers
@@ -1286,14 +1367,14 @@ programs that will do mathematical calculations for you. Before we move
 on, here are some programming challenges that will give you a chance to
 further apply what you've learned.
 
-### **Programming Challenges** 
+### **7.0 Programming Challenges** 
 
 Here are a few challenges that will give you a chance to practice the
 concepts from this chapter. Each problem can be solved in multiple ways,
 but you can find sample solutions at
 *<http://www.nostarch.com/doingmathwithpython/>*.
 
-#### ***\#1: Even-Odd Vending Machine*** 
+#### **7.1 #1: Even-Odd Vending Machine** 
 
 Try writing an "even-odd vending machine," which will take a number as
 input and do two things:
@@ -1312,21 +1393,24 @@ Similarly, if the input is [1], the program should print
 to display an error message if the input is a number with significant
 digits beyond the decimal point.
 
-#### ***\#2: Enhanced Multiplication Table Generator*** 
+#### **7.2 #2: Enhanced Multiplication Table Generator** 
 
 Our multiplication table generator is cool, but it prints only the first
 10 multiples. Enhance the generator so that the user can specify both
 the number and up to *which* multiple. For example, I should be able to
 input that I want to see a table listing the first 15 multiples of 9.
 
-#### ***\#3: Enhanced Unit Converter*** 
+#### **7.3 #3: Enhanced Unit Converter** 
 
 The unit conversion program we wrote in this chapter is limited to
 conversions between kilometers and miles. Try extending the program to
 convert between units of mass (such as kilograms and pounds) and between
 units of temperature (such as Celsius and Fahrenheit).
 
-#### ***\#4: Fraction Calculator*** 
+**page_24** 
+___
+
+#### **7.4 #4: Fraction Calculator** 
 
 Write a calculator that can perform the basic mathematical operations on
 two fractions. It should ask the user for two fractions and the
@@ -1379,7 +1463,10 @@ Result of Subtraction: 2/4
 In the case of division, you should let the user know whether the first
 fraction is divided by the second fraction or vice versa.
 
-#### ***\#5: Give Exit Power to the User*** 
+**page_25** 
+___
+
+#### **7.5 #5: Give Exit Power to the User** 
 
 All the programs we have written so far work only for one iteration of
 input and output. For example, consider the program to print the
@@ -1421,7 +1508,7 @@ If the user enters [y] as the input, the program exits out of
 the loop using the [break] statement ([break] exits
 out of the innermost loop without executing any other statement in that
 loop). If the user enters any other input (or none at all, just pressing
-[ENTER]{.small}), the [while] loop continues
+[ENTER]), the [while] loop continues
 []{#page_25}execution---that is, it prints the string again and
 continues doing so until the user wishes to exit. Here is a sample run
 of the program:
@@ -1436,6 +1523,9 @@ Do you want to exit? (y) for yes [n]
 I am in an endless loop\
 Do you want to exit? (y) for yes [y]
 ```
+
+**page_26** 
+___
 
 Based on this example, let's rewrite the multiplication table generator
 so that it keeps going until the user wants to exit. The new version of
